--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,8 @@
 
 [env:lolin32]
 platform = espressif32
-board = lolin32
+board = ttgo-lora32-v2
+#board = lolin32
 framework = arduino
 
 
@@ -31,3 +32,5 @@ lib_deps =
      ottowinter/ESPAsyncWebServer-esphome @ ^1.2.7
      arduino-libraries/NTPClient @ ^3.1.0
      fastled/FastLED@^3.4.0
+     adafruit/Adafruit Si7021 Library @ ^1.4.0
+     milesburton/DallasTemperature @ ^3.9.1
