Add OLED screen task, filters on Dallas and Si7021 values, reassigned task memory allocations

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,3 +34,4 @@ lib_deps =
      fastled/FastLED@^3.4.0
      adafruit/Adafruit Si7021 Library @ ^1.4.0
      milesburton/DallasTemperature @ ^3.9.1
+     thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.2.0
