--- a/platformio.ini
+++ b/platformio.ini
@@ -8,30 +8,26 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:lolin32]
+[env:esp32dev]
 platform = espressif32
-board = ttgo-lora32-v2
-#board = lolin32
+board = ttgo-lora32-v1
+
+; change MCU frequency
+; board_build.f_cpu = 80000000L
+build_type = debug
+monitor_filters = esp32_exception_decoder
 framework = arduino
-
-
-;[env:esp32dev]
-;platform = espressif32
-;board = esp32dev
-;framework = arduino
-
 monitor_speed = 115200
-
 upload_speed = 921600
+lib_deps = 
+	me-no-dev/AsyncTCP @ ^1.1.1
+	ottowinter/AsyncMqttClient-esphome@^0.8.5
+	ottowinter/ESPAsyncWebServer-esphome @ ^1.2.7
+	arduino-libraries/NTPClient @ ^3.1.0
+	fastled/FastLED@^3.4.0
+	adafruit/Adafruit Si7021 Library @ ^1.4.0
+	milesburton/DallasTemperature @ ^3.9.1
+	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.2.0
+	paulstoffregen/OneWire@^2.3.6
+	
 
-;upload_protocol = espota
-
-lib_deps =
-     me-no-dev/AsyncTCP @ ^1.1.1
-     ottowinter/AsyncMqttClient-esphome@^0.8.5
-     ottowinter/ESPAsyncWebServer-esphome @ ^1.2.7
-     arduino-libraries/NTPClient @ ^3.1.0
-     fastled/FastLED@^3.4.0
-     adafruit/Adafruit Si7021 Library @ ^1.4.0
-     milesburton/DallasTemperature @ ^3.9.1
-     thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.2.0
