--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,8 @@ platform = espressif32
 board = ttgo-lora32-v1
 
 ; change MCU frequency
-; board_build.f_cpu = 80000000L
+; board_build.f_cpu = 240000000L
+; board_build.f_flash = 240000000L
 build_type = debug
 monitor_filters = esp32_exception_decoder
 framework = arduino
