Add mutex to shared resources, add external DS3231, send full CSV to MQTT

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,5 +30,5 @@ lib_deps =
 	milesburton/DallasTemperature @ ^3.9.1
 	thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.2.0
 	paulstoffregen/OneWire@^2.3.6
+	rodan/ds3231@^1.0
 	
-
